--- a/Styles/laws/laws.css
+++ b/Styles/laws/laws.css
@@ -259,44 +259,19 @@ footer section h5 {
   .press div h3 {
     font-size: 1rem;
   }
-  main section {
-    height: 100%;
-  }
-  main section h1 {
-    font-size: 1.2rem;
-  }
-  main section h2 {
-    font-size: 1.2rem;
-  }
-  main section p {
-    font-size: 0.8rem;
-  }
-  main div h1 {
-    font-size: 2.5rem;
-  }
-  main div h2 {
-    font-size: 1.5rem;
-  }
-  main div h3 {
-    font-size: 1rem;
-  }
-  .nyhetsrum-header .nybtn {
-    font-size: 0.8rem;
-    margin: 1rem;
-    padding: 0.6rem;
-  }
-  .nyhetsrum-header h1 {
-    font-size: 4rem;
-  }
-  .nyhetsrum-header p {
-    font-size: 1.2rem;
-  }
   footer section {
     width: 100%;
     text-align: center;
+    margin: 0.5rem;
   }
   footer section li {
     max-width: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .arrowup {
+    display: none;
   }
 }
 
